Refactor agrego pruebas unitarias